tests/NormalTests/paczka1/fuzzy1/94720411.err
Error in line 9: RdV S750 61,6
Error in line 10: RdV S213 69,8
Error in line 3: YvEEr0WE7 S504 19,8
Error in line 15: S750 S504 52,7
Error in line 17: 8Yn5PDy23 S213 22,8
Error in line 20: 8Yn5PDy23 S504 64,7
Error in line 26: RdV S653 15,4
Error in line 39: 8Yn5PDy23 S653 37,94
